Mms: Updated czech translation
Change-Id: I1a5a58a90314c17c5814c6802bfd1ea0b757ca5f
Signed-off-by: Petr Reznicek <kecinzer@gmail.com>

--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -371,4 +371,86 @@
     <string name="pref_title_quickreply_callbutton">Zobrazit tlačítko Zavolat zpět</string>
     <string name="pref_summary_quickreply_callbutton">Zobrazit tlačítko Zavolat zpět v notifikaci zprávy</string>
     <string name="qr_multi_ask">Na čí zprávu odpovědět?</string>
+
+    <string name="pref_title_mms_group_mms">Skupinové zprávy</string>
+    <string name="pref_summary_mms_group_mms">Zapnout skupinové odesílání a přijímání MMS zpráv</string>
+
+    <string name="themes">Nastavení tématu SMS a MMS</string>
+    <string name="themes_summary">Změnit vzhled SMS a MMS</string>
+    <string name="themes_conv_list_title">Seznam konverzací</string>
+    <string name="themes_conv_list_summary">Barvy seznamu konverzací</string>
+    <string name="themes_msg_list_title">Styl zpráv</string>
+    <string name="themes_msg_list_summary">Barva a styl zobrazení zpráv</string>
+    <string name="themes_widget_title">Barvy widgetů</string>
+    <string name="themes_widget_summary">Barva textů na widgetu zpráv</string>
+    <string name="background_colors">Pozadí</string>
+    <string name="restore_defaults">Obnovit výchozí nastavení</string>
+    <string name="delete_custom_image">Smazat obrázek pozadí</string>
+    <string name="custom_image_title">Vlastní obrázek</string>
+    <string name="custom_image_summary">Nastavit obrázek jako pozadí</string>
+    <string name="restart_mms_title">Restartovat SMS a MMS</string>
+    <string name="restart_mms_summary">Některé nastavení, jako vlastní obrázek, vyžadují restart aplikace. Změna stylu widgetu vyžaduje jeho odstranění a znovu přidání na plochu.</string>
+    <string name="dialog_color_picker">Výběr barvy</string>
+    <string name="press_color_to_apply">Stiskem se barva použije</string>
+    <string name="arrow_right">→</string>
+    <string name="arrow_down">↓</string>
+    <string name="hex">Hex:</string>
+    <string name="hex_hint">#FF000000</string>
+    <string name="ics_color">Holo</string>
+    <string name="main_bg">Hlavní pozadí</string>
+    <string name="recv_text_header">Text přijatých zpráv</string>
+    <string name="sent_text_header">Text odeslaných zpráv</string>
+    <string name="show_contact_avatar">Zobrazit avatar kontaktu</string>
+    <string name="text_conv_layout">Styl konverzací</string>
+    <string name="conversation_list_unread">Seznam konverzací - nepřečtené</string>
+    <string name="conversation_list_read">Seznam konverzací - přečtené</string>
+    <string name="unread_bg">Pozadí - nepřečtené</string>
+    <string name="unread_contact">Kontakt - nepřečtené</string>
+    <string name="unread_subject">Předmět - nepřečtené</string>
+    <string name="unread_date">Datum - nepřečtené</string>
+    <string name="unread_count">Počet zpráv - nepřečtené</string>
+    <string name="unread_smiley">Smajlíci - nepřečtené</string>
+    <string name="read_bg">Pozadí - přečtené</string>
+    <string name="read_contact">Kontakt - přečtené</string>
+    <string name="read_subject">Předmět - přečtené</string>
+    <string name="read_date">Datum - přečtené</string>
+    <string name="read_count">Počet zpráv - přečtené</string>
+    <string name="read_smiley">Smajlíci - přečtené</string>
+    <string name="text_bubble_title">Nastavit styl bublin</string>
+    <string name="bubble_fill_parent_title">Bubliny vyplní hlavní pohled</string>
+    <string name="bubble">Bubliny</string>
+    <string name="bubble_none">Bez bublin</string>
+    <string name="hc_bubble">Bublina se šipkou dolů</string>
+    <string name="circle_bubble">Bublina se šipkou do strany</string>
+    <string name="frame_arrow">Rámeček se šipkou</string>
+    <string name="frame_outer_only">Vnější rámček</string>
+    <string name="frame">Rámeček</string>
+    <string name="show_contact_name">Zobrazit jména kontaktů</string>
+    <string name="sent_textcolor">Text - odeslané</string>
+    <string name="sent_smiley">Smajlíci - odeslané</string>
+    <string name="sent_datecolor">Datum - odeslané</string>
+    <string name="sent_contact_color">Kontakt - odeslané</string>
+    <string name="sent_text_bg">Pozadí - odeslané</string>
+    <string name="recv_textcolor">Text - přijaté</string>
+    <string name="recv_smiley">Smajlíci - přijaté</string>
+    <string name="recv_datecolor">Datum - přijaté</string>
+    <string name="recv_contact_color">Kontakt - přijaté</string>
+    <string name="recv_text_bg">Pozadí - přijaté</string>
+    <string name="layout_default">Výchozí rozložení</string>
+    <string name="layout_from_left">Levé rozložení</string>
+    <string name="layout_from_right">Pravé rozložení</string>
+    <string name="add_signature_title">Podpis</string>
+    <string name="add_signature_summary">Zvolit vlastní podpis u všech zpráv</string>
+    <string name="enter_text">vložit text</string>
+    <string name="widget_layout_dark">Tmavý</string>
+    <string name="widget_layout_light">Světlý</string>
+    <string name="widget_layout">Styl widgetu</string>
+    <string name="widget_read">Barvy - přečtené</string>
+    <string name="widget_unread">Barvy - nepřečtené</string>
+    <string name="widget_senders_textcolor_read">Text odesilatele - přečtené</string>
+    <string name="widget_senders_textcolor_unread">Text odesilatele - nepřečtené</string>
+    <string name="widget_subject_textcolor_read">Text předmětu - přečtené</string>
+    <string name="widget_subject_textcolor_unread">Text předmětu - nepřečtené</string>
+    <string name="widget_date_textcolor_read">Text data - přečtené</string>
+    <string name="widget_date_textcolor_unread">Text data - nepřečtené</string>
 </resources>
