--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -913,4 +913,12 @@
     <string name="only_three_please">Only select three options at once</string>
     <string name="pref_title_quick_reply">Quick Reply</string>
 
+    <!-- Soft Keyboard Type -->
+    <string name="pref_soft_keyboard_title">Keyboard</string>
+    <string name="pref_title_input_type">Soft keyboard type</string>
+    <string name="pref_summary_input_type">Select the soft keyboard to use when composing messages</string>
+    <string name="pref_keyboard_emoji">Emoji</string>
+    <string name="pref_keyboard_send">Enter to Send</string>
+    <string name="pref_keyboard_new_line">Enter for a new line</string>
+ 
 </resources>
