Mms: added the option to change the soft keyboard type when composing messages
This commit gives the user the option to change the keyboard from Emoji
to enter for a new line or enter to send.
The setting has no effect on the hardware keyboard.

Change-Id: I9bd661dac747652ad01e3b002aa294f691b87a37

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -976,5 +976,12 @@
     <string name="widget_subject_textcolor_unread">Unread subject text</string>
     <string name="widget_date_textcolor_read">Read date text</string>
     <string name="widget_date_textcolor_unread">Unread date text</string>
+    <!-- Soft Keyboard Type -->
+    <string name="pref_soft_keyboard_title">Keyboard</string>
+    <string name="pref_title_input_type">Soft keyboard type</string>
+    <string name="pref_summary_input_type">Select the soft keyboard to use when composing messages</string>
+    <string name="pref_keyboard_emoji">Emoji</string>
+    <string name="pref_keyboard_send">Enter to Send</string>
+    <string name="pref_keyboard_new_line">Enter for a new line</string>
 
 </resources>
