--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -349,4 +349,29 @@
     <string name="notification_separator" msgid="2334673105226536422">"  "</string>
     <string name="enumeration_comma" msgid="213598026698964628">", "</string>
     <string name="message_timestamp_format" msgid="4188999027493614617">"<xliff:g id="STRING_0">%1$s</xliff:g> – <xliff:g id="STRING_1">%2$s</xliff:g>"</string>
+    <string name="pref_title_sms_split_counter">Počítadlo rozdělení</string>
+    <string name="pref_summary_sms_split_counter">Přidat počítadlo do zprávy. Např. (1/2)</string>
+    <string name="pref_extra_settings">Speciální nastavení</string>
+    <string name="pref_title_enable_emojis">Zapnout emojíky</string>
+    <string name="pref_summary_enable_emojis">Zapnout podporu speciálních 471 unikodových emojíků</string>
+    <string name="pref_title_pref_key_emojis_quick">Tlačítko emojíků</string>
+    <string name="pref_summary_pref_key_emojis_quick">Zobrazit tlačítko vlevo od vstupního pole pro rychlý přístup</string>
+    <string name="menu_insert_emoji">Vložit emojík</string>
+    <string name="quick_call_back">Zavolat zpět</string>
+    <string name="quick_reply_sms">Rychlá odpověď</string>
+    <string name="quick_reply_sending">Rychlá odpověď odeslána</string>
+    <string name="qr_alert_title">Nic nebylo odesláno</string>
+    <string name="qr_alert_message">Opravdu zrušit tuto zprávu?</string>
+    <string name="qr_alert_yes">Ano</string>
+    <string name="qr_alert_no">Ne</string>
+    <string name="qr_alert_read">Označit jako přečtené</string>
+    <string name="qr_mark_read">Označit jako přečetené a zavřít</string>
+    <string name="qr_pick_smiley">Vložit smajlík</string>
+    <string name="qr_pick_emoji">Vložit emojík</string>
+    <string name="qr_close_popup">Zavřít</string>
+    <string name="qr_multi_ask">Na čí zprávu odpovědět?</string>
+    <string name="pref_title_quickreply_callbutton">Zobrazit tlačítko Zavolat zpět</string>
+    <string name="pref_summary_quickreply_callbutton">Zobrazit tlačítko Zavolat zpět v notifikaci zprávy</string>
+    <string name="pref_title_fulldate">Zobrazit celé datum</string>
+    <string name="pref_summary_fulldate">Zobrazit u zpráv celé datum</string>
 </resources>
