--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -349,4 +349,6 @@
     <string name="notification_separator" msgid="2334673105226536422">"  "</string>
     <string name="enumeration_comma" msgid="213598026698964628">", "</string>
     <string name="message_timestamp_format" msgid="4188999027493614617">"<xliff:g id="STRING_0">%1$s</xliff:g> – <xliff:g id="STRING_1">%2$s</xliff:g>"</string>
+    <string name="pref_title_strip_unicode">Oříznout unicode</string>
+    <string name="pref_summary_strip_unicode">Nahradit speciální znaky normálními pro zachování délky 160 znaků na SMS</string>
 </resources>
