Port "Strip Unicode" feature from ICS branch into JB-MR1
This feature add support for strip unicode characters that are not
supported for 160 character SMS.

Change-Id: I10c8f35b86f009b5484754572ff6ea33c52a4df3
Signed-off-by: Petr Reznicek <kecinzer@gmail.com>

--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -382,4 +382,6 @@
     <string name="pref_summary_quickreply_mark_read">Zobrazit tlačítko Jako přečtené v notifikaci zprávy</string>
     <string name="pref_title_fulldate">Zobrazit celé datum</string>
     <string name="pref_summary_fulldate">Zobrazit u zpráv celé datum</string>
+    <string name="pref_title_strip_unicode">Oříznout unicode</string>
+    <string name="pref_summary_strip_unicode">Nahradit speciální znaky normálními pro zachování délky 160 znaků na SMS</string>
 </resources>
