Mms: allow deleting of message threads from QuickReply
 + new menu option in QuickReply to delete the thread
 + the char counter in quick reply is now shows
   number of charaters left in message
 - fixed call to @Depreciated method

Patch Set 2:
 * now requires http://gerrit.sudoservers.com/4603
 + added two new options 'Mark Read' & 'Delete Thread'
 + buttons shown is now configurable
 + fixed notification not being marked as read on delete

Patch Set 3:
 + fixed showing buttons not showing as user specified
 / wip deleting only the latest notification may be
     a pain... I removed the delete entire thread
     but delete only last message is not working correctly
     yet

Change-Id: I55cae38e65f565af4e9edc86176e231ab043ff71

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -886,6 +886,8 @@
     <!-- Quick Reply -->
     <string name="quick_call_back">Call Back</string>
     <string name="quick_reply_sms">Quick Reply</string>
+    <string name="quick_reply_mark_read">Mark Read</string>
+    <string name="quick_reply_delete">Delete</string>
     <string name="quick_reply_sending">Quick reply sent to</string>
     <string name="qr_alert_title">Nothing Has Been Sent</string>
     <string name="qr_alert_message">Did you want to cancel this message?</string>
