Mms: add new QuickReply buttons Delete & Mark Read
Patch Set 1:
 + new menu option in QuickReply to delete the thread
 + the char counter in quick reply is now shows
   number of charaters left in message
 - fixed call to @Depreciated method
Patch Set 2:
 * now requires http://gerrit.sudoservers.com/4603
 + added two new options 'Mark Read' & 'Delete Thread'
 + buttons shown is now configurable
 + fixed notification not being marked as read on delete
Patch Set 3:
 + fixed showing buttons not showing as user specified
 / wip deleting only the latest notification may be
     a pain... I removed the delete entire thread
     but delete only last message is not working correctly
     yet
Patch Set 4:
 / clean up
Patch Set 5:
 + fixed Notification cache collision problem
 + lots of refactoring
 + changed 'Mark Read' icon but we may want to
   supply our own later.
Patch Set 6:
 + refactored out redundant code block

Change-Id: I55cae38e65f565af4e9edc86176e231ab043ff71

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -891,6 +891,7 @@
     <string name="qr_alert_message">Did you want to cancel this message?</string>
     <string name="qr_alert_yes">Yes</string>
     <string name="qr_alert_no">No</string>
+    <string name="quick_reply_delete">Delete</string>
     <string name="qr_alert_read">Mark Read</string>
     <string name="qr_mark_read">Mark Read &amp; Close</string>
     <string name="qr_pick_smiley">Insert Smiley</string>
