Breathing SMS Notification
This will give your SMS notifications a breathing effect in the statusbar instead of being a static icon.

Icon Credits: @Kroz

Change-Id: I67614713fbeec8ac77e933f29b8ee6e1a5f46162

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -913,4 +913,8 @@
     <string name="only_three_please">Only select three options at once</string>
     <string name="pref_title_quick_reply">Quick Reply</string>
 
+   <!-- Breathing Notifications -->
+   <string name="sms_breath">Breathing SMS</string>
+   <string name="sms_breath_summary">Will give your sms notifications a breathing effect in the statusbar.</string>
+
 </resources>
