Mms: Open thread in QuickReply & Enable sleep after sending msg from lockscreen
This adds an 'open' to the qr menu which allows you to enter
the current conversation(in turn clearing notification and
marking read/seen)

Second feature is optional and allows the device to be turned
back off when launching qr from lockscreen after its been relocked.
(device off->on->check notifs->use qr->relock->screen off)

Change-Id: Idd35e66f514ccf626995d2be5fc6af44500c5ba4
Signed-off-by: bmc08gt <bmc08gt.teamb00sted@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -384,6 +384,9 @@
     <!-- Settings item for boolean option to show the mark read button in the quick reply notification -->
     <string name="pref_title_quickreply_mark_read">Show mark read button</string>
     <string name="pref_summary_quickreply_mark_read">Show the mark as read button in the quick reply notification</string>
+    <!-- Settings to enabled pm.goToSleep after sending a sms via qr from lockscreen -->
+    <string name="pref_title_quickreply_resume_sleep">Enable device to return to sleep</string>
+    <string name="pref_summary_quickreply_resume_sleep">When sending a sms via quickreply from the lockscreen, allow device to return to sleep</string>
 
     <!-- The vibrate notification modes -->
     <string-array name="prefEntries_vibrateWhen">
@@ -905,6 +908,7 @@
     <string name="qr_alert_no">No</string>
     <string name="qr_alert_read">Mark Read</string>
     <string name="qr_mark_read">Mark Read &amp; Close</string>
+    <string name="qr_mark_open">Open</string>
     <string name="qr_pick_smiley">Insert Smiley</string>
     <string name="qr_pick_emoji">Insert Emoji</string>
     <string name="qr_close_popup">Close</string>
@@ -912,5 +916,6 @@
     <string name="quick_reply_hint">Type Message</string>
     <string name="only_three_please">Only select three options at once</string>
     <string name="pref_title_quick_reply">Quick Reply</string>
+    
 
 </resources>
