Mms: Enable SoftBank emoji encoding
This adds an option to enable SoftBank emoji encoding when inserting
emoji into SMS/MMS message.

There is nothing wrong with the default Unicode emoji encoding other
than the fact that most Japanese carriers does not support it as they
have their own coding conversion tables. The option toggles to SoftBank
encoding, the decoding both Unicode and SoftBank-codeed emoji is
alredy working correctly (both code tables are already part of the
src/com/android/mms/util/EmojiParser.java). Unicode encoding will
stay the default.

Change-Id: I51326842bbe3e1a5b31521261544d49bae1a7766
Signed-off-by: rdgate <rdgate@gmail.com>

--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -400,6 +400,10 @@
     <string name="pref_title_pref_key_emojis_quick">クイック絵文字ボタン</string>
     <string name="pref_summary_pref_key_emojis_quick">絵文字を素早く入力するためにテキスト入力エリアの左側に絵文字ボタンを配置する</string>
 
+    <!-- Enable SoftBank emoji encoding -->
+    <string name="pref_title_enable_softbank_encoding">SoftBank絵文字</string>
+    <string name="pref_summary_enable_softbank_encoding">SoftBankの絵文字変換ルールを使用する</string>
+
     <!-- Quick Reply -->
     <string name="quick_call_back">電話する</string>
     <string name="quick_call_back_short">電話</string>
