--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -896,6 +896,10 @@
     <string name="pref_title_pref_key_emojis_quick">Quick emojis button</string>
     <string name="pref_summary_pref_key_emojis_quick">Shows a button to the left of text input-area for quick access</string>
 
+    <!-- Enable SoftBank emoji encoding -->
+    <string name="pref_title_enable_softbank_encoding">SoftBank emoji</string>
+    <string name="pref_summary_enable_softbank_encoding">Use SoftBank emoji encoding</string>
+
     <!-- Quick Reply -->
     <string name="quick_call_back">Call Back</string>
     <string name="quick_call_back_short">Call</string>
