Updated Japanese translations
- Add missing entries

Change-Id: Iccbf5701ed2461f7f9889a5a0c49f60454b394db
Signed-off-by: rdgate <rdgate@gmail.com>

--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -425,4 +425,8 @@
     <string name="only_three_please">3つまでしか選択できません</string>
     <string name="pref_title_quick_reply">クイックリプライ</string>
 
+   <!-- Breathing Notifications -->
+   <string name="sms_breath">通知アニメーション</string>
+   <string name="sms_breath_summary">ステータスバーの通知アイコンを明滅させる</string>
+
 </resources>
