--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -331,6 +331,10 @@
     <!-- Settings screen, section heading for display-specific settings -->
     <string name="pref_display_title">Display</string>
 
+    
+    <!-- Settings item description for enabling the SMS sending countdown -->
+    <string name="pref_summary_sms_send_countdown">Countdown delay before sending messages</string>
+    <string name="pref_summary_sms_send_countdown_value">Add a countdown delay before sending messages to avoid sending mistaken messages</string>
     <!-- Settings item description for entering SIM card message screen -->
     <string name="pref_summary_manage_sim_messages">Manage messages stored on your SIM card</string>
     <!-- Settings item description for boolean MMS delivery report setting -->
@@ -381,6 +385,9 @@
     <!-- Settings item for boolean option to show the delete button in the quick reply notification -->
     <string name="pref_title_quickreply_delete">Show delete button</string>
     <string name="pref_summary_quickreply_delete">Show the delete message button in the quick reply notification</string>
+    <!-- Settings item for delaying SMS -->
+    <string name="pref_title_sms_send_countdown">Help stop mistaken messages</string>
+    <string name="pref_title_sms_send_countdown_value">Delay before dispatching the message</string>
     <!-- Settings item for boolean option to show the mark read button in the quick reply notification -->
     <string name="pref_title_quickreply_mark_read">Show mark read button</string>
     <string name="pref_summary_quickreply_mark_read">Show the mark as read button in the quick reply notification</string>
@@ -800,6 +807,11 @@
 
     <!-- Brief small label shown to right of message when it is being sent. -->
     <string name="sending_message">SENDING\u2026</string>
+
+
+    <!-- Label shown to right of message before it is being sent when the countdown feature is enabeld -->
+    <string name="sending_countdown_prefix">SENDING IN\u0020</string>
+    <string name="sending_countdown_suffix">s\u2026</string>
 
     <!-- Title of progress dialog for picker -->
     <string name="pick_too_many_recipients">Too many recipients</string>
