--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -425,8 +425,16 @@
     <string name="only_three_please">3つまでしか選択できません</string>
     <string name="pref_title_quick_reply">クイックリプライ</string>
 
-   <!-- Breathing Notifications -->
-   <string name="sms_breath">通知アニメーション</string>
-   <string name="sms_breath_summary">ステータスバーの通知アイコンを明滅させる</string>
+    <!-- Breathing Notifications -->
+    <string name="sms_breath">通知アニメーション</string>
+    <string name="sms_breath_summary">ステータスバーの通知アイコンを明滅させる</string>
+
+    <!-- Soft Keyboard Type -->
+    <string name="pref_soft_keyboard_title">キーボード</string>
+    <string name="pref_title_input_type">ソフトキーボードタイプ</string>
+    <string name="pref_summary_input_type">メッセージ編集時に使用するソフトキーボードを選択する</string>
+    <string name="pref_keyboard_emoji">絵文字</string>
+    <string name="pref_keyboard_send">エンターで送信</string>
+    <string name="pref_keyboard_new_line">エンターで改行</string>
 
 </resources>
