--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -390,4 +390,10 @@
     <string name="sms_breath">Pulzující SMS</string>
     <string name="sms_breath_summary">Přidá upozorněním na zprávy ve stavové liště pulzující efekt.</string>
     <string name="pref_display_title">Zobrazení</string>
+    <string name="pref_soft_keyboard_title">Klávesnice</string>
+    <string name="pref_title_input_type">Softwarová klávesnice</string>
+    <string name="pref_summary_input_type">Vybrat softwarovou klávesnici pro použití při psaní zpráv</string>
+    <string name="pref_keyboard_emoji">Emojíci</string>
+    <string name="pref_keyboard_send">Enterem odeslat</string>
+    <string name="pref_keyboard_new_line">Enterem udělat nový řádek</string>
 </resources>
