--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -350,6 +350,8 @@
     <string name="pref_title_pref_key_emojis_quick">Tlačítko emojíků</string>
     <string name="pref_summary_pref_key_emojis_quick">Zobrazit tlačítko vlevo od vstupního pole pro rychlý přístup</string>
     <string name="menu_insert_emoji">Vložit emojík</string>
+    <string name="pref_title_enable_softbank_encoding">SoftBank emojíci</string>
+    <string name="pref_summary_enable_softbank_encoding">Použít SoftBank kódování emojíků</string>
     <string name="quick_call_back">Zavolat zpět</string>
     <string name="quick_call_back_short">Zavolat</string>
     <string name="quick_reply_sms">Rychlá odpověď</string>
@@ -396,4 +398,15 @@
     <string name="pref_keyboard_emoji">Emojíci</string>
     <string name="pref_keyboard_send">Enterem odeslat</string>
     <string name="pref_keyboard_new_line">Enterem udělat nový řádek</string>
+    <string name="pref_mms_ua_default_android">Výchozí Android</string>
+    <string name="pref_mms_ua_nokia_n95">Nokia N95</string>
+    <string name="pref_mms_ua_iphone_3_0">iPhone (3.0)</string>
+    <string name="pref_mms_ua_blackberry_8800">BlackBerry 8800</string>
+    <string name="pref_mms_ua_sonyericsson_w800i">Sony Ericsson W800i</string>
+    <string name="pref_mms_ua_softbank_x01t">SoftBank X01T</string>
+    <string name="pref_mms_ua_softbank_myrmms">SoftBank MyrMMS</string>
+    <string name="pref_mms_ua_custom_option">Vlastní\u2026</string>
+    <string name="pref_title_mms_user_agent">Vlastní User-Agent</string>
+    <string name="pref_summary_mms_user_agent">Spoof phone jako jiný model pro MMS</string>
+    <string name="pref_mms_user_agent_custom_set">Vlastní User Agent nastaven na:\n</string>
 </resources>
